--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^10.13.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^10.13.1",
     "maath": "^0.7.0",
     "react": "^18.2.0",
+    "react-carousel3": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "react-tilt": "^1.0.2",
+    "react-touch-drag-slider": "^2.2.5",
     "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^6.0.7",
+    "swiper": "^10.1.0",
     "three": "^0.154.0",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
