--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://atishay-25j.github.io/portfolio-website",
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.88.4",
@@ -9,7 +10,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "caniuse-lite": "^1.0.30001639",
+    "ajv": "^8.0.0",
+    "browserslist": "^4.25.4",
     "cssnano": "^6.0.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.13.1",
@@ -21,21 +23,23 @@
     "react-intersection-observer": "^9.5.2",
     "react-motion": "^0.5.2",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.1",
     "react-tilt": "^1.0.2",
     "react-touch-drag-slider": "^2.2.5",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.0.7",
     "swiper": "^10.1.0",
-    "three": "^0.154.0",
+    "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -58,6 +62,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.31"
   }
 }
